<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="welcome_title">My Nanodegree Apps!</string>
    <string name="media_streamer">Spotify Streamer</string>
    <string name="super_duo1">Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="ant_terminator">Build It Bigger</string>
    <string name="materialize">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="toast_message_base">This will load my</string>
    <string name="toast_message_end"> app!</string>
</resources>
