<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_title"
        android:text="@string/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_title_material"
        android:paddingBottom="@dimen/title_bottom_padding" />

    <Button
        android:id="@+id/button_media_streamer"
        style="@style/AppButtonOrange"
        android:text="@string/media_streamer"
        android:layout_below="@id/textview_title"
        android:onClick="onClickButton" />

    <Button
        android:id="@+id/button_super_duo1"
        style="@style/AppButtonOrange"
        android:text="@string/super_duo1"
        android:layout_below="@id/button_media_streamer"
        android:onClick="onClickButton" />

    <Button
        android:id="@+id/button_super_duo2"
        style="@style/AppButtonOrange"
        android:text="@string/super_duo2"
        android:layout_below="@id/button_super_duo1"
        android:onClick="onClickButton" />

    <Button
        android:id="@+id/button_ant_terminator"
        style="@style/AppButtonOrange"
        android:text="@string/ant_terminator"
        android:layout_below="@id/button_super_duo2"
        android:onClick="onClickButton" />

    <Button
        android:id="@+id/button_materialize"
        style="@style/AppButtonOrange"
        android:text="@string/materialize"
        android:layout_below="@id/button_ant_terminator"
        android:onClick="onClickButton" />

    <Button
        android:id="@+id/button_capstone"
        style="@style/AppButtonRed"
        android:text="@string/capstone"
        android:layout_below="@id/button_materialize"
        android:onClick="onClickButton" />

</RelativeLayout>
